# EcoNX-Tracker

./: .gitignore  AIInterface.cpp  AIInterface.h  CMakeLists.txt  CarbonModel.cpp  CarbonModel.h  EnergyModel.cpp  EnergyModel.h  NXCamDataExtractor.cpp  NXCamDataExtractor.h  NXCarbonAddon.cpp  NXCarbonAddon.h  OPENAI_INTEGRATION.md  README.md  TimeModel.cpp  TimeModel.h  main.cpp
datasets/: machining_power.csv
docs/: BUILD_CONFIGURATION.md  INSTALLATION_GUIDE.md  NX_ADDON_INSTALLATION.md  STEP_BY_STEP_INSTALLATION.md  TROUBLESHOOTING_GUIDE.md
